mugen-riscv/logs_failed/easymock/oe_test_easymock_spring/2023-05-26-01_04_28.log
+ source ../common/common_easymock.sh
++ source /root/mugen/libs/locallibs/common_lib.sh
+++ python3 --version
+++ '[' 0 -eq 0 ']'
+++ source /root/mugen/libs/locallibs/common_lib_python.sh
+ main
++ type -t post_test
+ '[' -n function ']'
+ trap post_test EXIT INT HUP TERM
+ rpm -qa
+ grep expect
++ type -t config_params
+ '[' -n '' ']'
++ type -t pre_test
+ '[' -n function ']'
+ pre_test
+ LOG_INFO 'Start to prepare the test environment.'
+ message='Start to prepare the test environment.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'Start to prepare the test environment.'
Fri May 26 01:04:34 2023 - INFO  - Start to prepare the test environment.
+ DNF_INSTALL springframework-test
+ pkgs=springframework-test
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen/libs/locallibs/rpm_manage.py install --pkgs springframework-test --node 1 --tempfile ''
Fri May 26 01:04:51 2023 - ERROR - pkgs:(springframework-test) not found
+ tmpfile2=
+ '[' -z '' ']'
+ tmpfile=
+ deploy_env
+ DNF_INSTALL 'easymock junit'
+ pkgs='easymock junit'
+ node=1
+ '[' -z '' ']'
+ tmpfile=
++ python3 /root/mugen/libs/locallibs/rpm_manage.py install --pkgs 'easymock junit' --node 1 --tempfile ''
+ tmpfile2=/tmp/tmplq2w18hd
+ '[' -z '' ']'
+ tmpfile=/tmp/tmplq2w18hd
++ grep 'java-.*-openjdk'
++ rpm -qa 'java*'
++ awk -F - '{print $2}'
+ java_version=1.8.0
+ DNF_INSTALL java-1.8.0-devel
+ pkgs=java-1.8.0-devel
+ node=1
+ '[' -z /tmp/tmplq2w18hd ']'
++ python3 /root/mugen/libs/locallibs/rpm_manage.py install --pkgs java-1.8.0-devel --node 1 --tempfile /tmp/tmplq2w18hd
+ tmpfile2=/tmp/tmplq2w18hd
+ '[' -z /tmp/tmplq2w18hd ']'
+ LOG_INFO 'End to prepare the test environment.'
+ message='End to prepare the test environment.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'End to prepare the test environment.'
Fri May 26 01:09:14 2023 - INFO  - End to prepare the test environment.
++ type -t run_test
+ '[' -n function ']'
+ run_test
+ LOG_INFO 'Start to run test.'
+ message='Start to run test.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'Start to run test.'
Fri May 26 01:09:16 2023 - INFO  - Start to run test.
+ javac -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:/usr/share/java/springframework/*:/usr/share/java/cglib/*:/usr/share/java/objenesis/*:' -d . OtherClass.java OurClass.java OurClassTest.java
OurClassTest.java:4: error: package org.springframework.test.util does not exist
import org.springframework.test.util.ReflectionTestUtils;
                                    ^
OurClassTest.java:18: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
OurClassTest.java:23: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other2);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
3 errors
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ exit_mode=0
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_spring.sh line 30'
+ message='oe_test_easymock_spring.sh line 30'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_spring.sh line 30'
Fri May 26 01:09:48 2023 - ERROR - oe_test_easymock_spring.sh line 30
+ '[' 0 -eq 1 ']'
+ return 0
+ grep 'OK (1 test)'
+ java -classpath '/usr/share/java/*:/usr/share/java/hamcrest/*:/usr/share/java/springframework/*:/usr/share/java/cglib/*:/usr/share/java/objenesis/*:' org.junit.runner.JUnitCore OurClassTest
+ CHECK_RESULT 1
+ actual_result=1
+ expect_result=0
+ mode=0
+ error_log=
+ exit_mode=0
+ '[' -z 1 ']'
+ '[' 0 -eq 0 ']'
+ test 1x '!=' 0x
+ test -n ''
+ (( exec_result++ ))
+ LOG_ERROR 'oe_test_easymock_spring.sh line 32'
+ message='oe_test_easymock_spring.sh line 32'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level error --message 'oe_test_easymock_spring.sh line 32'
Fri May 26 01:09:54 2023 - ERROR - oe_test_easymock_spring.sh line 32
+ '[' 0 -eq 1 ']'
+ return 0
+ LOG_INFO 'End to run test.'
+ message='End to run test.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'End to run test.'
Fri May 26 01:09:55 2023 - INFO  - End to run test.
+ CASE_RESULT 0
+ case_re=0
+ test -z 2
+ test 2 -gt 0
+ LOG_ERROR 'failed to execute the case.'
+ message='failed to execute the case.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level error --message 'failed to execute the case.'
Fri May 26 01:09:56 2023 - ERROR - failed to execute the case.
+ exit 2
+ post_test
+ LOG_INFO 'Start to restore the test environment.'
+ message='Start to restore the test environment.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'Start to restore the test environment.'
Fri May 26 01:09:58 2023 - INFO  - Start to restore the test environment.
+ clear_env
+ DNF_REMOVE
+ node=1
+ pkg_list=
+ mode=0
+ [[ -z /tmp/tmplq2w18hd ]]
+ '[' 0 -ne 0 ']'
+ '[' 1 == 0 ']'
+ python3 /root/mugen/libs/locallibs/rpm_manage.py remove --node 1 --pkgs '' --tempfile /tmp/tmplq2w18hd
+ '[' 0 -ne 0 ']'
++ ls
++ grep -vE '.sh|.java|.xml|expect_result|main|test'
+ rm -rf
+ LOG_INFO 'End to restore the test environment.'
+ message='End to restore the test environment.'
+ python3 /root/mugen/libs/locallibs/mugen_log.py --level info --message 'End to restore the test environment.'
Fri May 26 01:10:39 2023 - INFO  - End to restore the test environment.
